--- a/movieAndroid/src/main/res/layout/activity_detail.xml
+++ b/movieAndroid/src/main/res/layout/activity_detail.xml
@@ -116,6 +116,7 @@
             android:fontFamily="@font/sfpro_medium"
             android:text="@string/watch_trailer"
             android:textAllCaps="false"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"
@@ -134,6 +135,7 @@
             android:fontFamily="@font/sfpro_medium"
             android:text="@string/add_favorite"
             android:textAllCaps="false"
+            android:textSize="14sp"
             android:textColor="@color/white"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
